<resources>
    <string name="app_name">VowMee</string>
    <string name="action_settings">Settings</string>

    <!-- Strings related to login -->
    <string name="prompt_name">Full name</string>
    <string name="login_tagline">Hi, Welcome to VowMee</string>
    <string name="content_file_provider_authority">net.xvidia.vowmee.fileprovider</string>
    <string name="login_forgot_password">Forgot Password</string>
    <string name="login_register">Register</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_phone">Phone number</string>
    <string name="prompt_or">OR\n Register with</string>
    <string name="action_next">Next</string>
    <string name="action_otp">Send OTP</string>
    <string name="action_save">Save</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_name">This name is too short</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="register_profile_name">Name</string>
    <string name="register_profile_status">Status message</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions." </string>
    <string name="download_queue_provider_authority">com.amazonaws.mobile.downloader-net.xvidia.vowmee</string>
    <string name="facebook_app_id">1531675467151873</string>
    <string name="twitter_consumer_key">rjHdKNmbQ80o2xFY2tlQiZ6Gp</string>
    <string name="twitter_secret_key">g5NOA6bsjcGK0DPFmpo8JqSZ2WEs3BzIeV72GtDj3fukuZaD22</string>
    <string name="io_fabric_ApiKey">6385a671790de10868e0780191a6c21789f6bd47</string>
    <!--Home page-->
    <string name="home_profile_invite">Invite friends to VowMee</string>
    <string name="home_profile_go_live">Go Live with your friends</string>
    <string name="home_profile_share">Share your captured moments</string>
    <string name="home_profile_select_video">Select Video</string>
    <string name="home_profile_no_status">no status message</string>
    <string name="home_profile_friends">Friends</string>
    <string name="home_profile_followers">Followers</string>
    <string name="home_profile_following">Following</string>
    <!-- Network service apis-->
    <string name="base_url">http://192.168.10.134:9875</string>
    <string name="api_auth_facebook">/vowmeauth/facebook</string>
    <string name="api_auth_twitter">/vowmeauth/twitter</string>
    <string name="api_social_regiter">/vowmeauth/social/register</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_main_activity">SimpleImageTextList</string>
    <string name="image">Image thumbnail</string>
</resources>
