<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:gravity="center_horizontal"
    android:orientation="vertical" android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content" android:orientation="vertical">

            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText android:id="@+id/register_phone_number" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:hint="@string/prompt_phone"
                    android:imeActionId="@+id/ime_action_next"
                    android:imeActionLabel="@string/action_next"
                    android:maxLength="10"
                    android:imeOptions="actionUnspecified" android:inputType="phone"
                    android:maxLines="1" android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>


            <Button android:id="@+id/button_send_otp"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:layout_marginTop="16dp" android:text="@string/action_otp"
                android:background="@color/orange"
                android:textColor="@android:color/white"
                android:textStyle="bold" />
        </LinearLayout>
</LinearLayout>
