<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:gravity="center"
            android:text="@string/login_tagline"
            android:textAlignment="center"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
            android:textColor="@android:color/white"
            tools:ignore="NewApi" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="50">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/white"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/textView_vertical_margin">

                    <EditText
                        android:id="@+id/register_full_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_name"
                        android:imeActionLabel="@string/action_next"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textAutoComplete"
                        android:maxLines="1"
                        android:padding="@dimen/activity_vertical_margin"
                        android:singleLine="true"
                        android:textColorHint="@color/common_action_bar_splitter"
                        android:textSize="@dimen/textSize" />


                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/textView_vertical_margin">

                    <AutoCompleteTextView
                        android:id="@+id/register_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_email"
                        android:imeActionLabel="@string/action_next"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:padding="@dimen/activity_vertical_margin"
                        android:singleLine="true"
                        android:textColorHint="@color/common_action_bar_splitter"
                        android:textSize="@dimen/textSize" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/textView_vertical_margin">

                    <AutoCompleteTextView
                        android:id="@+id/register_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="@dimen/activity_vertical_margin"
                        android:hint="@string/prompt_username"
                        android:inputType="textAutoComplete"
                        android:maxLines="1"
                        android:paddingLeft="@dimen/activity_vertical_margin"
                        android:singleLine="true"
                        android:textColorHint="@color/common_action_bar_splitter"
                        android:textSize="@dimen/textSize" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/textView_vertical_margin">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@android:color/transparent"
                        android:orientation="horizontal">


                        <EditText
                            android:id="@+id/register_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawablePadding="@dimen/activity_vertical_margin"
                            android:hint="@string/prompt_password"
                            android:imeActionLabel="@string/action_sign_in_short"
                            android:imeOptions="actionUnspecified"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:paddingLeft="@dimen/activity_vertical_margin"
                            android:password="true"
                            android:singleLine="true"
                            android:textColorHint="@color/common_action_bar_splitter"
                            android:textSize="@dimen/textSize" />

                        <ImageButton
                            android:id="@+id/showpassword"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentRight="true"
                            android:layout_alignParentTop="true"
                            android:layout_centerVertical="true"
                            android:background="@android:color/transparent"
                            android:src="@drawable/pasword_eye" />
                    </RelativeLayout>

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/register_button"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:background="@color/orange"
            android:text="@string/login_register"
            android:textColor="@android:color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:gravity="center"
                android:text="@string/prompt_or"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_weight="20"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/facebook_login_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="30"
                android:background="@android:color/transparent"
                android:padding="@dimen/activity_horizontal_margin"
                android:src="@drawable/facebook"
                android:textColor="@android:color/white" />

            <ImageButton
                android:id="@+id/customer_twitter_login_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="30"
                android:background="@android:color/transparent"
                android:padding="@dimen/activity_horizontal_margin"
                android:src="@drawable/twitter" />

            <com.twitter.sdk.android.core.identity.TwitterLoginButton
                android:id="@+id/twitter_login_button"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:layout_weight="01"
                android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>