<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:gravity="center_horizontal"
    android:orientation="vertical" android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" tools:context=".LoginActivity"
    android:background="@drawable/bg">

    <!-- Login progress -->
    <ProgressBar android:id="@+id/login_progress" style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_marginBottom="8dp" android:visibility="gone" />

    <LinearLayout android:id="@+id/login_form" android:layout_width="match_parent"
        android:layout_height="match_parent" android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="25"
            android:textAlignment="center"
            android:gravity="center"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
            android:text="@string/login_tagline"
            android:textColor="@android:color/white"
            tools:ignore="NewApi" />
        <LinearLayout android:id="@+id/email_login_form" android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="35" android:background="@android:color/white" android:orientation="vertical">


            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="30"
                android:layout_marginTop="@dimen/activity_vertical_margin">

                <AutoCompleteTextView android:id="@+id/email" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:hint="@string/prompt_email"
                    android:drawableLeft="@drawable/username"
                    android:paddingBottom="30dp"
                    android:drawablePadding="@dimen/activity_vertical_margin"
                    android:textColorHint="@color/common_action_bar_splitter"
                    android:inputType="textEmailAddress" android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="30">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:gravity="center"
                    android:orientation="horizontal">
                    <EditText android:id="@+id/password" android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:drawableLeft="@drawable/password" android:hint="@string/prompt_password"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:drawablePadding="@dimen/activity_vertical_margin"
                        android:password="true"
                        android:paddingBottom="30dp"
                        android:textColorHint="@color/common_action_bar_splitter"
                        android:imeOptions="actionUnspecified" android:inputType="textPassword"
                        android:maxLines="1" android:singleLine="true" />
                    <ImageButton
                        android:id="@+id/showpassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:src="@drawable/pasword_eye"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true" />
                </RelativeLayout>
            </android.support.design.widget.TextInputLayout>

            <Button android:id="@+id/email_sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="40"
                android:text="@string/action_sign_in"
                android:background="@color/orange"
                android:textColor="@android:color/white"/>
        </LinearLayout>
            <!--<com.facebook.login.widget.LoginButton-->
            <!--android:id="@+id/facebook_login_button"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="100dp"-->
            <!--android:textStyle="bold"-->
            <!--android:background="@drawable/com_facebook_button_background"-->
            <!--android:padding="@dimen/activity_vertical_margin"-->
            <!--android:textSize="20sp"-->
            <!--android:layout_marginTop="@dimen/activity_vertical_margin"/>-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="25"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:orientation="horizontal">
                <ImageButton
                    android:id="@+id/facebook_login_button"
                    android:layout_width="0dp"
                    android:layout_weight="30"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:src="@drawable/facebook"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:textColor="@android:color/white"
                    />

                <ImageButton
                    android:id="@+id/customer_twitter_login_button"
                    android:layout_width="0dp"
                    android:layout_weight="30"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:src="@drawable/twitter"
                    android:padding="@dimen/activity_horizontal_margin" />
                <ImageButton
                    android:id="@+id/signin"
                    android:layout_width="0dp"
                    android:layout_weight="30"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:src="@drawable/google"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:layout_gravity="center" />
                <com.twitter.sdk.android.core.identity.TwitterLoginButton
                    android:id="@+id/twitter_login_button"
                    android:layout_width="0dp"
                    android:layout_weight="01"
                    android:layout_marginTop="5dp"
                    android:layout_height="50dp"
                    android:visibility="gone"/>
            </LinearLayout>
            <!-- <com.google.android.gms.common.SignInButton
                 android:id="@+id/signin"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:layout_marginTop="5dp" />-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="20"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:gravity="center"
            android:orientation="vertical">
            <TextView
                android:id="@+id/forgot_password"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="50"
                android:gravity="center"
                android:autoLink="all"
                android:text="@string/login_forgot_password"
                android:textColor="@android:color/white"/>
            <TextView
                android:id="@+id/register_user"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="50"
                android:gravity="top|center_horizontal"
                android:text="@string/login_register"
                android:textColor="@android:color/white" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>