<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@android:color/white">

    <android.support.v7.widget.Toolbar
        android:id="@+id/user_home_toolbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:title="@string/app_name"
        android:minHeight="?attr/actionBarSize"
        android:subtitleTextColor="@android:color/white"
        android:titleTextColor="@android:color/white"
        android:theme="@style/ThemeOverlay.MyApp.ActionBar"
        style="@style/Widget.MyApp.Toolbar.Solid"
        app:layout_scrollFlags="scroll|enterAlways"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="35"
            android:background="@color/orangeTint">
            <ImageView
                android:id="@+id/home_profile_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/user"
                android:scaleType="centerCrop" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_alignParentBottom="true"
                android:layout_margin="@dimen/activity_vertical_margin">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="33"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center"
                    android:layout_alignParentBottom="true">
                    <TextView
                        android:id="@+id/home_profile_friends"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="146"
                        android:gravity="center"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                        android:textStyle="bold"
                        android:textColor="@android:color/white"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:alpha="0.9"
                        android:layout_below="@id/home_profile_friends"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                        android:text="@string/home_profile_friends"
                        android:textColor="@android:color/white" />
                </LinearLayout>
                <ImageView
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:layout_marginLeft="@dimen/activity_vertical_margin"
                    android:layout_marginRight="@dimen/activity_vertical_margin"/>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="33"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center"
                    android:layout_alignParentBottom="true">
                    <TextView
                        android:id="@+id/home_profile_following"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="246"
                        android:gravity="center"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                        android:textStyle="bold"
                        android:textColor="@android:color/white"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:alpha="0.9"
                        android:layout_below="@id/home_profile_following"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                        android:text="@string/home_profile_following"
                        android:textColor="@android:color/white" />
                </LinearLayout>
                <ImageView
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:layout_marginLeft="@dimen/activity_vertical_margin"
                    android:layout_marginRight="@dimen/activity_vertical_margin"/>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="33"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center"
                    android:layout_alignParentBottom="true">
                    <TextView
                        android:id="@+id/home_profile_followers"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="346"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                        android:textStyle="bold"
                        android:textColor="@android:color/white"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:alpha="0.9"
                        android:layout_below="@id/home_profile_followers"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                        android:text="@string/home_profile_followers"
                        android:textColor="@android:color/white" />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="60"
            android:orientation="vertical"
            android:background="@color/white" >
            <TableRow
                android:id="@+id/layout_invite_friends"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="20"
                android:orientation="horizontal"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:background="@color/white" >
            <ImageView
                android:layout_width="0dp"
                android:layout_weight="20"
                android:layout_height="match_parent"
                android:gravity="left|center"
                android:src="@drawable/invite_button"
                android:textColor="@android:color/white"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="80"
                android:layout_height="match_parent"
                android:gravity="left|center"
                android:text="@string/home_profile_invite"
                android:textColor="@android:color/black"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />
            </TableRow>
            <TableRow
                android:id="@+id/layout_go_live_friends"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="20"
                android:orientation="horizontal"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:background="@color/white" >
                <ImageView
                    android:layout_width="0dp"
                    android:layout_weight="20"
                    android:layout_height="match_parent"
                    android:gravity="left|center"
                    android:src="@drawable/live_button"
                    android:textColor="@android:color/white"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="80"
                    android:layout_height="match_parent"
                    android:text="@string/home_profile_go_live"
                    android:gravity="left|center"
                    android:textColor="@color/black"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"/>
            </TableRow>
            <TableRow
                android:id="@+id/layout_share_moments"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="20"
                android:orientation="horizontal"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:background="@color/white" >
                <ImageView
                    android:layout_width="0dp"
                    android:layout_weight="20"
                    android:layout_height="match_parent"
                    android:gravity="left|center"
                    android:src="@drawable/share_button"
                    android:textColor="@android:color/white"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="80"
                    android:layout_height="match_parent"
                    android:gravity="left|center"
                    android:text="@string/home_profile_share"
                    android:textColor="@android:color/black"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="20"
                android:orientation="horizontal"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:background="@color/white" >

            </TableRow>

        </LinearLayout>
</LinearLayout>